Remove nested git repos and update .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,18 @@
-_Folder/2025-09-19_PRactice_repo/PRactice_repo/
+# Jupyter checkpoints
+.ipynb_checkpoints/
+
+# Python cache
+__pycache__/
+*.pyc
+
+# Data files
+*.csv
+*.pkl
+*.xlsx
+
+# OS / IDE files
+.DS_Store
+.vscode/
+.idea/
+_Folder/2025-09-19_PRactice_repo/
 first-repository/
